Fix surrogate handling